# ProgaLabs

./: Aeroflot.cpp  Aeroflot.h  CMakeLists.txt  Cat.cpp  Cat.h  DecToBin.cpp  DecToBin.h  lab1.cpp  lab1.h  lab10.cpp  lab10.h  lab11.cpp  lab11.h  lab12.cpp  lab12.h  lab16.cpp  lab16.h  lab17.cpp  lab17.h  lab18.cpp  lab18.h  lab19.cpp  lab19.h  lab2.cpp  lab2.h  lab20.cpp  lab20.h  lab21.cpp  lab21.h  lab22.cpp  lab22.h  lab23.cpp  lab23.h  lab24.cpp  lab24.h  lab25.cpp  lab25.h  lab27.cpp  lab27.h  lab28.cpp  (+18 more)
files/: text16.txt  text17.txt  text19-1.txt  text19.txt  text20-1.txt  text20.txt  text21.txt  text22.txt  text23.txt  text24-1.txt  text24.txt
